# LNGL

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/0.cpp/: CMakeLists.txt
examples/0.cpp/hello-cpp/: CMakeLists.txt  main.cpp
examples/1.basic_opengl/: CMakeLists.txt
examples/1.basic_opengl/1.hello_triangle/: hello_triangle.cpp
examples/1.basic_opengl/4.1.textures/: textures.cpp
examples/1.getting_started/: CMakeLists.txt
examples/1.getting_started/1.1.hello_window/: hello_window.cpp
examples/1.getting_started/1.2.hello_window_clear/: hello_window_clear.cpp
examples/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
examples/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
examples/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
examples/1.getting_started/3.2.vertex_attribute/: 3.2.vertex_attribute.cpp
examples/1.getting_started/3.3.shaders_class/: shaders_class.cpp
examples/1.getting_started/4.1.textures/: textures.cpp
examples/1.getting_started/4.2.textures_combined/: textures_combined.cpp
examples/1.getting_started/4.4.textures_wrap_mode/: textures_wrap_mode.cpp
examples/1.getting_started/4.5.textures_exercise3/: textures_exercise3.cpp
examples/1.getting_started/4.6.textures_exercise4/: textures_exercise4.cpp
examples/1.getting_started/5.1.transformations/: transformations.cpp
examples/1.getting_started/6.1.coordinate_systems/: coordinate_systems.cpp
examples/1.getting_started/6.2.coordinate_systems_depth/: coordinate_systems_depth.cpp
examples/1.getting_started/6.2.mvp_depth/: mvp_depth.cpp
examples/1.getting_started/6.3.coordinate_systems_multiple/: coordinate_systems_multiple.cpp
examples/1.getting_started/7.1.camera_circle/: camera_circle.cpp
examples/1.getting_started/7.2.camera_keyboard/: camera_keyboard.cpp
examples/1.getting_started/7.2.camera_keyboard_dt/: camera_keyboard_dt.cpp
examples/1.getting_started/7.3.camera_mouse/: camera_mouse.cpp
examples/1.getting_started/7.3.camera_mouse_zoom/: camera_mouse_zoom.cpp
examples/1.getting_started/7.4.camera_class/: camera_class.cpp
examples/2.advanced_opengl/1.model_loading/: CMakeLists.txt
examples/2.advanced_opengl/4.dsa/: hello_triangle_dsa.cpp
examples/2.advanced_opengl/buffers/: CMakeLists.txt
examples/2.basic_lighting/3.2.materials_exercise1/: materials_exercise1.cpp
examples/2.basic_lighting/6.multiple_lights/: multiple_lights.cpp
examples/2.lighting/1.colors/: colors.cpp
examples/2.lighting/2.1.basic_lighting_diffuse/: basic_lighting_diffuse.cpp
examples/2.lighting/3.1.materials/: materials.cpp
examples/2.lighting/4.1.lighting_maps_diffuse_map/: lighting_maps_diffuse.cpp
examples/2.lighting/5.2.light_casters_point/: light_casters_point.cpp
examples/2.lighting/5.3.light_casters_spot/: light_casters_spot.cpp
examples/3.basic_lighting/4.4.lighting_maps_exercise4/: lighting_maps_exercise4.cpp
examples/3.basic_lighting/5.1.light_casters_directional/: light_casters_directional.cpp
examples/3.basic_lighting/5.4.light_casters_spot_soft/: light_casters_spot_soft.cpp
examples/3.model_loading/1.model_loading/: model_loading.cpp
examples/4.advanced_lighting/5.1.parallax_mapping/: parallax_mapping.cpp
examples/4.advanced_lighting/5.3.parallax_occlusion_mapping/: parallax_occlusion_mapping.cpp
examples/4.advanced_lighting/7.bloom/: bloom.cpp
examples/4.advanced_opengl/: CMakeLists.txt  rendering_pipeline.md
examples/4.advanced_opengl/2.stencil_testing/: stencil_testing.cpp
examples/5.advanced_lighting/: CMakeLists.txt
examples/6.pbr/: CMakeLists.txt  readme.txt
examples/7.advanced_effects/: CMakeLists.txt
examples/7.in_practice/: CMakeLists.txt
examples/8.guest/: CMakeLists.txt
examples/9.self/: CMakeLists.txt
examples/ecs/: Main.cpp  WindowManager.cpp  triangle.vs
examples/extensions/: esx_extensions.txt
examples/frame_graph/: CMakeLists.txt  frame_graph.cpp  present.fs
examples/frame_graph_ecs/: frame_graph_ecs.cpp
examples/frame_graph_multi_thread/: frame_graph_multi_thread.cpp  render_thread.h
examples/optimazitions/: api_use.cpp  optimization_method.cpp
(+317 files in other folders)
